<resources>
    <string name="app_name">ImoveIt</string>
    <string name="title_activity_maps">Map</string>
    <string name="trip_id">Trip Id</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Done</string>
    <string name="number_dot">.</string>
    <string name="btn_backspace">DEL</string>
    <string name="btn_submit_pin">SUBMIT</string>
    <string name="Text">Text</string>
    <string name="PDF_Image">PDF/Image</string>
    <string name="Barcode">Barcode</string>
    <string name="PageMode">Page Mode</string>
    <string name="DirectIO">Direct I/O</string>
    <string name="MSR">MSR</string>
    <string name="SCR">SCR</string>
    <string name="CashDrawer">Cash Drawer</string>
    <string name="ETC">Etc.</string>
    <string name="title_activity_my_map">Map</string>
    <string name="fragment_map__search">Search...</string>
    <string name="title_activity_test_map">Map</string>
    <string name="NEXMO_API_KEY">70c0329f</string>
    <string name="NEXMO_API_SECRET">GsCTushIdbfXJ9eQ</string>
    <string name="home">Home</string>
    <string name="credit_request">Credit Request</string>
    <string name="set_up">"Setup "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ipTitle">Please put the server IP address</string>
    <string name="emailTitle">Enter email address</string>
    <string name="companyNameTitle">Enter company Name</string>
    <string name="deviceIdTitle">Your Device ID</string>
    <string name="registrationKeyTitle">Registration Key</string>
    <string name="submitBtnText">Submit</string>
    <string name="resetDatabaseTitle">Do you want to reset Database?</string>
    <string name="yes">YES</string>
    <string name="portTypeTitle">Port Type</string>
    <string name="bluetoothString">Bluetooth</string>
    <string name="bluetoothLogEnergyString">Bluetooth Low Energy</string>
    <string name="printerModelTitle">Printer Model</string>
    <string name="bluetoothListTitle">Bluetooth List</string>
    <string name="setUpIp">Setup IP</string>
    <string name="syncGroupPolicies">Sync Group Policies</string>
    <string name="printerOpenTitle">Printer Open</string>
    <string name="registerDeviceTitle">Register Device</string>
    <string name="ipInputError">Please enter server IP</string>
    <string name="ipSaved">IP Saved!</string>
    <string name="unableToSave">Unable to save. Please try again leter!</string>
    <string name="invalidEmail">Enter valid email!</string>
    <string name="title_activity_route_plan">RoutePlanActivity</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC5vAgb-nawregIa5gRRG34wnabasN3blk</string>

</resources>
