<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".InvoiceDetails">


    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/edit_text_background"
        android:singleLine="true"
        android:layout_toLeftOf="@id/close"
        android:layout_marginEnd="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#060606"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_weight="1.06"
        android:background="@android:color/white"
        android:divider="@drawable/keyboard_divider"
        android:orientation="vertical"
        android:showDividers="middle|beginning|end">

        <TableRow
            style="@style/keyboard_row"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t9_key_1"
                style="@style/keyboard_number_buttonPOPUP"
                android:background="@drawable/button_ripple"
                android:layout_marginEnd="5dp"
                android:text="@string/number_one"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_2"
                style="@style/keyboard_number_buttonPOPUP"
                android:background="@drawable/button_ripple"
                android:text="@string/number_two"
                android:layout_marginEnd="5dp"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_3"
                style="@style/keyboard_number_buttonPOPUP"
                android:background="@drawable/button_ripple"
                android:text="@string/number_three"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="50dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_4"
                style="@style/keyboard_number_buttonPOPUP"
                android:background="@drawable/button_ripple"
                android:layout_marginEnd="5dp"
                android:text="@string/number_four"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_5"
                style="@style/keyboard_number_buttonPOPUP"
                android:background="@drawable/button_ripple"
                android:layout_marginEnd="5dp"
                android:text="@string/number_five"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_6"
                style="@style/keyboard_number_buttonPOPUP"
                android:background="@drawable/button_ripple"
                android:text="@string/number_six"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="50dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_7"
                style="@style/keyboard_number_buttonPOPUP"
                android:background="@drawable/button_ripple"
                android:layout_marginEnd="5dp"
                android:text="@string/number_seven"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_8"
                style="@style/keyboard_number_buttonPOPUP"
                android:background="@drawable/button_ripple"
                android:layout_marginEnd="5dp"
                android:text="@string/number_eight"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_9"
                style="@style/keyboard_number_buttonPOPUP"
                android:background="@drawable/button_ripple"

                android:text="@string/number_nine"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="50sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_0"
                style="@style/keyboard_number_buttonPOPUP"
                android:background="@drawable/button_ripple"
                android:layout_marginEnd="5dp"
                android:text="@string/number_zero"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="45dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_dot"
                style="@style/keyboard_button_POPUP"
                android:text="@string/number_dot"
                android:background="@drawable/button_ripple"
                android:layout_marginEnd="5dp"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/t9_key_backspace"
                style="@style/keyboard_button_POPUP"
                android:background="@drawable/button_ripple_red"
                android:layout_marginEnd="5dp"
                android:text="@string/btn_backspace"
                android:textColor="@color/bright_foreground_inverse_material_light"
                android:textSize="40dp" />

        </TableRow>


    </TableLayout>

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/cash_sig"
        android:layout_width="fill_parent"
        android:layout_height="141dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="#edeaea" />

    <Button
        android:id="@+id/close"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button_ripple_red"
        android:drawableLeft="@drawable/close_icon"
        android:padding="10dp"
        android:text="CLOSE"
        android:textColor="@android:color/white" />

    <CheckBox
        android:id="@+id/checkBoxacceptcash"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keyboard"
        android:layout_centerHorizontal="true"
        android:text="I accept that I have collected money "
        android:textColor="@android:color/background_dark"
        android:textSize="10sp" />

</RelativeLayout>
